--- a/yueshipin/res/layout/detail_show.xml
+++ b/yueshipin/res/layout/detail_show.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/parent"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#F2F2F2"
-    android:id="@+id/parent" >
-	
-	<LinearLayout 
-	    android:id="@+id/none_net"
-	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"
-	    android:background="@drawable/none_net"
-	    android:visibility="gone">
-	    
-	</LinearLayout>
+    android:background="#F2F2F2" >
+
+    <LinearLayout
+        android:id="@+id/none_net"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/none_net"
+        android:visibility="gone" >
+    </LinearLayout>
+
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="wrap_content"
@@ -44,9 +44,9 @@
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:layout_weight="1"
-            android:paddingLeft="6dp"
             android:gravity="center"
-            android:onClick="OnClickTab1TopLeft" >
+            android:onClick="OnClickTab1TopLeft"
+            android:paddingLeft="6dp" >
 
             <ImageView
                 android:id="@+id/imageView1"
@@ -77,9 +77,9 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingRight="16dp"
             android:onClick="OnClickTab1TopRight"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:paddingRight="16dp" >
 
             <ImageView
                 android:id="@+id/imageView2"
@@ -123,17 +123,7 @@
                     android:layout_marginTop="13dp"
                     android:scaleType="fitXY" />
 
-                <!--
-                     ImageButton
-                    android:id="@+id/button1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="128dp"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/detail_movie_play"
-                    android:onClick="OnClickPlay" />
-                -->
-                <!-- 2 -->
+           <!-- 2 -->
 
                 <Button
                     android:id="@+id/button2"
@@ -166,8 +156,8 @@
                     android:layout_below="@+id/button2"
                     android:layout_marginLeft="129dp"
                     android:layout_marginTop="14dp"
-                    android:textColor="@color/grey"
-                    android:text="主持/嘉宾：" />
+                    android:text="主持/嘉宾："
+                    android:textColor="@color/grey" />
 
                 <TextView
                     android:id="@+id/textView2"
@@ -177,8 +167,8 @@
                     android:layout_below="@+id/textView1"
                     android:layout_marginLeft="129dp"
                     android:layout_marginTop="5dp"
-                    android:textColor="@color/grey"
-                    android:text="首    播：" />
+                    android:text="首    播："
+                    android:textColor="@color/grey" />
 
                 <TextView
                     android:id="@+id/textView4"
@@ -188,8 +178,8 @@
                     android:layout_below="@+id/textView2"
                     android:layout_marginLeft="129dp"
                     android:layout_marginTop="5dp"
-                    android:textColor="@color/grey"
-                    android:text="地    区：" />
+                    android:text="地    区："
+                    android:textColor="@color/grey" />
 
                 <TextView
                     android:id="@+id/textView7"
@@ -199,8 +189,8 @@
                     android:layout_marginTop="14dp"
                     android:layout_toRightOf="@+id/textView1"
                     android:ellipsize="end"
-                    android:textColor="@color/grey"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textColor="@color/grey" />
 
                 <TextView
                     android:id="@+id/textView5"
@@ -210,8 +200,8 @@
                     android:layout_alignBottom="@+id/textView2"
                     android:layout_toRightOf="@+id/textView2"
                     android:ellipsize="end"
-                    android:textColor="@color/grey"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textColor="@color/grey" />
 
                 <TextView
                     android:id="@+id/textView6"
@@ -221,8 +211,8 @@
                     android:layout_alignBottom="@+id/textView4"
                     android:layout_toRightOf="@+id/textView4"
                     android:ellipsize="end"
-                    android:textColor="@color/grey"
-                    android:singleLine="true" />
+                    android:singleLine="true"
+                    android:textColor="@color/grey" />
             </RelativeLayout>
 
             <LinearLayout
@@ -267,14 +257,7 @@
                     android:layout_weight="1"
                     android:padding="2dp" >
 
-                    <!--
-                         Button 
-                        android:id="@+id/cache_button9"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:onClick="OnClickCacheDown"
-                        android:background="@drawable/cache_download"/>
-                    -->
+         
 
                     <Button
                         android:id="@+id/cache_button9"
@@ -284,8 +267,7 @@
                         android:onClick="OnClickCacheDown" />
                 </LinearLayout>
             </LinearLayout>
-			
-            
+
             <LinearLayout
                 android:id="@+id/LinearLayoutXGYD"
                 android:layout_width="match_parent"
@@ -326,9 +308,9 @@
                         android:layout_height="match_parent"
                         android:layout_alignParentRight="true"
                         android:layout_alignParentTop="true"
-                        android:layout_marginTop="2dp"
                         android:layout_marginBottom="2dp"
-                        android:layout_marginRight="13dp" >
+                        android:layout_marginRight="13dp"
+                        android:layout_marginTop="2dp" >
 
                         <ImageButton
                             android:id="@+id/button9"
@@ -356,10 +338,10 @@
                             android:layout_height="28dp"
                             android:background="@drawable/detail_show_button"
                             android:ellipsize="end"
+                            android:gravity="center_vertical"
                             android:onClick="OnClickShowPlay"
                             android:singleLine="true"
-                            android:text="加载中..." 
-                            android:gravity="center_vertical"/>
+                            android:text="加载中..." />
 
                         <Button
                             android:id="@+id/show_button1"
@@ -369,10 +351,10 @@
                             android:layout_marginTop="1dp"
                             android:background="@drawable/detail_show_button"
                             android:ellipsize="end"
+                            android:gravity="center_vertical"
                             android:onClick="OnClickShowPlay"
                             android:singleLine="true"
-                            android:text="加载中..."
-                            android:gravity="center_vertical" />
+                            android:text="加载中..." />
 
                         <Button
                             android:id="@+id/show_button2"
@@ -382,10 +364,10 @@
                             android:layout_marginTop="1dp"
                             android:background="@drawable/detail_show_button"
                             android:ellipsize="end"
+                            android:gravity="center_vertical"
                             android:onClick="OnClickShowPlay"
                             android:singleLine="true"
-                            android:text="加载中..." 
-                            android:gravity="center_vertical"/>
+                            android:text="加载中..." />
 
                         <Button
                             android:id="@+id/show_button3"
@@ -395,10 +377,10 @@
                             android:layout_marginTop="1dp"
                             android:background="@drawable/detail_show_button"
                             android:ellipsize="end"
+                            android:gravity="center_vertical"
                             android:onClick="OnClickShowPlay"
                             android:singleLine="true"
-                            android:text="加载中..." 
-                            android:gravity="center_vertical"/>
+                            android:text="加载中..." />
                     </LinearLayout>
                 </RelativeLayout>
             </LinearLayout>
@@ -443,7 +425,8 @@
                         android:text="简介内容加载中..." />
                 </LinearLayout>
             </LinearLayout>
-               <LinearLayout
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
@@ -471,27 +454,28 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
-                        android:maxEms="8"
+                        android:maxEms="13"
+                        android:paddingLeft="5dp"
                         android:singleLine="true"
                         android:text="1234"
                         android:textColor="@color/black"
-                        android:paddingLeft="5dp"
-                        android:textSize="20sp" />
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/review1Content"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:maxLines="5"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
-                        android:maxLines="5"
                         android:text="1234" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
-                        android:textColor="@color/darkorange"
-                        android:text="全部  >" />
+                        android:text="全部  >"
+                        android:textColor="@color/darkorange" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -512,12 +496,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
-                        android:maxEms="8"
+                        android:maxEms="13"
+                        android:paddingLeft="5dp"
                         android:singleLine="true"
                         android:text="1234"
-                        android:paddingLeft="5dp"
                         android:textColor="@color/black"
-                        android:textSize="20sp" />
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/review2Content"
@@ -527,12 +511,13 @@
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
                         android:text="1234" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
-                        android:textColor="@color/darkorange"
-                        android:text="全部  >" />
+                        android:text="全部  >"
+                        android:textColor="@color/darkorange" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -553,27 +538,48 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
-                        android:maxEms="8"
+                        android:maxEms="13"
+                        android:paddingLeft="5dp"
                         android:singleLine="true"
                         android:text="1234"
-                        android:paddingLeft="5dp"
                         android:textColor="@color/black"
-                        android:textSize="20sp" />
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/review3Content"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:maxLines="5"
-                       	android:paddingLeft="5dp"
+                        android:paddingLeft="5dp"
                         android:paddingRight="5dp"
                         android:text="1234" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
+                        android:text="全部  >"
+                        android:textColor="@color/darkorange" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="10dp" />
+
+                <LinearLayout
+                    android:id="@+id/moreReviews"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:onClick="OnClickMoreReviews"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:text="更多影评 >"
                         android:textColor="@color/darkorange"
-                        android:text="全部  >" />
+                        android:textSize="15sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -582,13 +588,14 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-	<LinearLayout 
-	    android:id="@+id/new_guider_3"
-	    android:layout_width="fill_parent"
-	    android:layout_height="fill_parent"
-	    android:background="@drawable/new_guider_3"
-	    android:onClick="OnClickNewGuider_3"
-	    android:visibility="gone">
-	    
-	</LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/new_guider_3"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/new_guider_3"
+        android:onClick="OnClickNewGuider_3"
+        android:visibility="gone" >
+    </LinearLayout>
+
 </RelativeLayout>
