--- a/yueshipin/res/layout/detail_tv.xml
+++ b/yueshipin/res/layout/detail_tv.xml
@@ -44,8 +44,8 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingLeft="16dp"
-            android:onClick="OnClickTab1TopLeft" >
+            android:onClick="OnClickTab1TopLeft"
+            android:paddingLeft="16dp" >
 
             <ImageView
                 android:id="@+id/imageView1"
@@ -76,9 +76,9 @@
             android:layout_height="fill_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingRight="16dp"
             android:onClick="OnClickTab1TopRight"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+            android:paddingRight="16dp" >
 
             <ImageView
                 android:id="@+id/imageView2"
@@ -551,7 +551,8 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="16dp"
                 android:orientation="vertical" >
-       <ImageView
+
+                <ImageView
                     android:id="@+id/imageView_comment"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -572,27 +573,28 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
-                        android:maxEms="8"
+                        android:maxEms="13"
+                        android:paddingLeft="5dp"
                         android:singleLine="true"
                         android:text="1234"
                         android:textColor="@color/black"
-                        android:paddingLeft="5dp"
-                        android:textSize="20sp" />
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/review1Content"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:maxLines="5"
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
-                        android:maxLines="5"
                         android:text="1234" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
-                        android:textColor="@color/darkorange"
-                        android:text="全部  >" />
+                        android:text="全部  >"
+                        android:textColor="@color/darkorange" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -613,12 +615,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
-                        android:maxEms="8"
+                        android:maxEms="13"
+                        android:paddingLeft="5dp"
                         android:singleLine="true"
                         android:text="1234"
-                        android:paddingLeft="5dp"
                         android:textColor="@color/black"
-                        android:textSize="20sp" />
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/review2Content"
@@ -628,12 +630,13 @@
                         android:paddingLeft="5dp"
                         android:paddingRight="5dp"
                         android:text="1234" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
-                        android:textColor="@color/darkorange"
-                        android:text="全部  >" />
+                        android:text="全部  >"
+                        android:textColor="@color/darkorange" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -654,27 +657,48 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
-                        android:maxEms="8"
+                        android:maxEms="13"
+                        android:paddingLeft="5dp"
                         android:singleLine="true"
                         android:text="1234"
-                        android:paddingLeft="5dp"
                         android:textColor="@color/black"
-                        android:textSize="20sp" />
+                        android:textSize="15sp" />
 
                     <TextView
                         android:id="@+id/review3Content"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:maxLines="5"
-                       	android:paddingLeft="5dp"
+                        android:paddingLeft="5dp"
                         android:paddingRight="5dp"
                         android:text="1234" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
+                        android:text="全部  >"
+                        android:textColor="@color/darkorange" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="10dp" />
+
+                <LinearLayout
+                    android:id="@+id/moreReviews"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:onClick="OnClickMoreReviews"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right"
+                        android:text="更多影评 >"
                         android:textColor="@color/darkorange"
-                        android:text="全部  >" />
+                        android:textSize="15sp" />
                 </LinearLayout>
 
                 <LinearLayout
