--- a/yueshipin/res/layout/reviews.xml
+++ b/yueshipin/res/layout/reviews.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="240dip"
+    android:layout_height="350dip"
     android:background="@drawable/report_bg" >
 
     <TextView
@@ -26,8 +26,8 @@
         android:textColor="@color/black" />
 
     <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="300dip"
+        android:layout_height="400dip"
         android:layout_below="@id/title"
         android:layout_centerHorizontal="true"
         android:paddingLeft="10dp"
